# ft_ssl

./: .gitignore  CMakeLists.txt  Makefile  Makefile-1  README.md  S.txt  exec_manager.c  ft_ssl  gen_constants.py  kek  launch.py  lreznak-.txt  main.c  mk  norm.txt  norme.txt  normerrors.txt  python3  stream_test.c  test
.tests/: read_speed_test.c
.tests/test_files/: 1516len  5050len  5110len  5113len  5121len  54len
Whirlpool/: whirlpool.c
base64/: base64.c  base64_decode.c  base64_encode.c  encode_usage.c
base64/context/: base64_states.c  init_base64_context.c  parse_base64_argv.c  set_decode_mode.c  set_encode_mode.c  set_input_file.c  set_output_file.c
cipher/context/: cphr_argv_state_a.c  cphr_argv_state_d.c  cphr_argv_state_e.c  cphr_argv_state_i.c  cphr_argv_state_k.c  cphr_argv_state_o.c  cphr_argv_state_p.c  cphr_argv_state_s.c  cphr_argv_state_v.c  cphr_is_a_flag.c  cphr_is_decrypt_mode.c  cphr_is_encrypt_mode.c  cphr_is_iv_set.c  cphr_is_key_set.c  cphr_is_pass_set.c  cphr_is_salt_set.c  des_argv_states.c  destruct_cipher_context.c  init_cipher_context.c  init_des_context.c  set_cipher_bufsize.c  set_cipher_init_vector.c  set_cipher_input_file.c  set_cipher_key.c  set_cipher_output_file.c  set_cipher_pass_salt.c  set_cipher_password_from_stdin.c  set_cipher_random_pass_salt.c
cipher/des/: .des_get_block.c  des.c  des_3des.c  des_3des_decode.c  des_3des_encode.c  des_block_debug.c  des_cbc.c  des_cbc_decode.c  des_cbc_decrypt.c  des_cbc_encrypt.c  des_cfb.c  des_ctr.c  des_cut_padding.c  des_ecb.c  des_ecb_decode.c  des_ecb_decrypt.c  des_ecb_encode.c  des_ecb_encrypt.c  des_encode_block.c  des_exmpl.cpp  des_get_block.c  des_ip.c  des_key_gen.c  des_ofb.c  des_ofb_decode.c  des_ofb_encode.c  des_pbkdf.c  des_permutation.c  des_swap_block_halves.c  key.txt  s_permutation.c  s_permutation.h  try_get_des_salt_from_fd.c
cipher/pbkdf/: pbkdf_md5.c
des/context/: des_argv_states.c  init_des_context.c
encode/: encode_usage.c
encode/base64/: base64.c  base64_decode.c  base64_encode.c
encode/context/: argv_errors.c  destruct_encode_context.c  encode_argv_states.c  init_encode_context.c  parse_encode_argv.c  set_decode_mode.c  set_encode_mode.c  set_input_file.c  set_output_file.c
ft_md5/: a.out  debug.c  md5.c  md5_bin.c  round_test
ft_sha256/: calc_sha256_from_fd.c  calc_sha256_from_string.c  ft_sha256.c  print_sha256.c
ft_ssl/: exec_manager.c  main.c
hash/md5/: calculate_md5_from_fd.c  calculate_md5_from_mem.c  print_md5.c
hash/sha256/: calc_sha256_from_fd.c
hash/sha384/: sha384.c
include/: .tests.h  base64.h  cipher_context.h  des.h  encode_context.h  ft_md5.h  ft_sha256.h  ft_sha384.h  ft_ssl.h  genrsa_context.h  key_io.h  md5.h  pbkdf.h  rsa.h  rsa_context.h  rsautl_context.h  sha256.h  sha384.h  ssl.h  tests.h  utilities.h  whirlpool.h
md5/: calculate_md5_block.c  calculate_md5_buf_padding.c  calculate_md5_from_fd.c  calculate_md5_from_string.c  md5.c  print_md5.c
multiprecision_lib/: multiprecision.h  multiprecision1.c
original_documentation/des/: useful_links.txt
rsa/: genrsa.c  parse_gen_rsa_args.c  parse_rsa_args.c  parse_rsautl_args.c  rsa.c  rsautl.c
rsa/genrsa/: genrsa.c
rsa/genrsa_ctx/: genrsa_ctx2.c  internal_genrsa_ctx.h  parse_gen_rsa_args.c
rsa/key_io/: input_routines.c  internal_key_io.h  key_io.c  output_routines.c  routines1.c  routines2.c
rsa/pem_io/: pem_io.c
rsa/rsa/: internal_rsa.h  rsa.c  rsa2.c
rsa/rsa_breaker/: rsa_breaker.c
rsa/rsa_ctx/: internal_rsa_ctx.h  parse_rsa_args.c  rsa_ctx2.c
rsa/rsautl/: internal_rsautl.h  rsa_utl_routines.c  rsautl.c
rsa/rsautl ctx/: parse_rsautl_args.c
rsa/rsautl_ctx/: parse_rsautl2.c  parse_rsautl_args.c  parse_rsautl_internal.h
sha256/: calc_sha256_buf_padding.c  calc_sha256_from_fd.c  calc_sha256_from_string.c  ft_sha256.c  print_sha256.c  sha256.c
sha384/: sha384.c
ssl/: cipher_executor.c  command_executor.c  encode_executor.c  exec_manager.c  hash_executor.c  help.c  main.c  parse_hash_flags.c  wrong_command_exit.c
ssl/utilities/: fatal.c  int128convs.c  mem_xor.c  mod_inverse.c  print_hex_memory.c  print_uint32_bits.c  print_uint64_bits.c  smax.c  solovay_strassen_test.c  xmalloc.c
tests/: .tests.c  file  file1  generate_random_strings.py  hb  hex_to_byte.c  mm  read_bytes.c  read_speed_test.c  test  testall.sh  tests.c  Жц
tests/TimeBenchmarkFiles/: BigFilesGenerator.py
tests/base64/: genbase64inpyt.py  test64.sh
tests/base64/testfiles/: 1000len  102len  105len  107len  108len  110len  112len  113len  115len  116len  118len  119len  11len  122len  124len  125len  127len  15len  19len  20len  21len  22len  23len  26len  27len  29len  30len  33len  34len  35len  36len  38len  40len  42len  43len  45len  46len  48len  50len  52len  (+33 more)
tests/base64_tests/: test  testall.sh  testbase64decode.sh  testbase64encode.sh
tests/base64_tests/testfiles/: 1000000len  100000len  100len  101len  103len  104len  106len  109len  10len  111len  114len  117len  120len  121len  123len  126len  12len  13len  14len  16len  17len  18len  24len  25len  28len  31len  32len  37len  39len  41len  44len  47len  49len  4len  51len  54len  55len  5len  (+19 more)
tests/des_ecb_tests/: decrypt_test.sh  des_eptively_easy.sh  encrypt_test.sh  generate_random_key.py  generate_random_password.py  generate_random_salt.py  test.h  test_all.sh  tohash  you_shall_not_pass_test.sh
tests/des_tests/: are_they_on_cbc_questionmark.sh  des_cbc_decrypt_test.sh  des_cbc_encrypt_test.sh  des_ecb_decrypt_test.sh  des_ecb_encrypt_test.sh  des_eptively_easy.sh  test_all.sh  you_shall_not_pass_test.sh
tests/hash_tests/: testmd5sha256.sh
tests/rsa_tests/: key.pub  my  priv.key  priv.pem  rsa_tests.sh
tests/ssl_des_tests/: encrypt_test.sh  generate_random_strings.py
tests/test_files/: 49len  50len  5109len  5111len  5112len  5114len  5116len  5118len  53len  56len  59len  5len  61len  62len  63len  65l
tests/test_openssl_binary/: file  file1  kek.c  rc  read_cipher.c  secret.txt  secret1.txt  test.c  test2
utilities/: .debug.c  debug.c  is_flag.c  nstrjoin.c  print_uint32_bits.c  xmalloc.c
(+145 files in other folders)
